# payment-analytics

./: .gitignore  COVER_LETTER.md  METABASE_SETUP_INSTRUCTIONS.md  PROJECT_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  proton-data-analyst-agent-plan.md  proton-data-analyst-job-description.txt  pyproject.toml
dashboards/: DATA_DOCUMENTATION.md  KEY_FINDINGS.md  METABASE_SETUP.md
scripts/: quickstart.sh  status.sh
src/: 01_clean_data.py  02_enrich_data.py  03_load_to_db.py
